--- a/A/Altice/Altice_May2020/ads/MC_OPT_1P_39_1yr_(300_Mbps)/320x50/320x50.html
+++ b/A/Altice/Altice_May2020/ads/MC_OPT_1P_39_1yr_(300_Mbps)/320x50/320x50.html
@@ -244,6 +244,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
         gsap.set('.frameImage', {x:'-100%'});
         gsap.set('.frameText', {y:'100%'});
         gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
+        gsap.set('#frameText1, #frameText12', {autoAlpha:0,x:"0%",y:"0%"});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frame, {x:0,y:0})
@@ -288,9 +289,9 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
         var animateFrame1 = function(flag){
           gsap.set('#frameText1', {x: '0'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .from('#frameText1', {autoAlpha:0})
-          .to('#frameText1', {autoAlpha:0,delay:1.5})
-          .from('#frameText12', {autoAlpha:0})
+          .to('#frameText1', {autoAlpha:1})
+            .to('#frameText1', {autoAlpha:0,delay:1.5})
+            .to('#frameText12', {autoAlpha:1})
           .to('#frame1', (flag==true?{}:{delay:1.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         gsap.delayedCall(.8, animateFrame1);
