--- a/A/Altice/Altice_May2020/ads/MC_OPT_AO_59_3yr_Competitive_offer/300x50/300x50_frame1.html
+++ b/A/Altice/Altice_May2020/ads/MC_OPT_AO_59_3yr_Competitive_offer/300x50/300x50_frame1.html
@@ -236,6 +236,7 @@ amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
         gsap.set('.frameImage', {x:'-100%'});
         gsap.set('.frameText', {y:'100%'});
         gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
+        gsap.set('#frameText1, #frameText12', {autoAlpha:0,x:"0%",y:"0%"});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frame, {x:0,y:0})
