--- a/A/Altice/Altice_May2020/ads/MC_OPT_AO_59_3yr_Competitive_offer/970x250/970x250_frame2.html
+++ b/A/Altice/Altice_May2020/ads/MC_OPT_AO_59_3yr_Competitive_offer/970x250/970x250_frame2.html
@@ -279,19 +279,19 @@ amo.registerAttribute("frameText33","TEXT","<div style='top:30px;left:275px;' cl
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
         }
-        // var animateFrame5 = function(flag){
-        //   var frameId = 5;
-        //   gsap.set('#frameBackground', {display: 'none'});
-        //   gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-        //   .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[5]})
-        //   // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
-        // }
-        // var animateFrame4 = function(flag){
-        //   var frameId = 4;
-        //   gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-        //   .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[4]})
-        //   .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame5}));
-        // }
+        /*var animateFrame5 = function(flag){
+          var frameId = 5;
+          gsap.set('#frameBackground', {display: 'none'});
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[5]})
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
+        }
+        var animateFrame4 = function(flag){
+          var frameId = 4;
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[4]})
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame5}));
+        }*/
         var animateFrame3 = function(flag){
           var frameId = 3;
           gsap.set('#frameBackground', {display: 'block'});
