--- a/E/Epic/Adventure/ads/Variation4/160x600/160x600_frame2.html
+++ b/E/Epic/Adventure/ads/Variation4/160x600/160x600_frame2.html
@@ -338,7 +338,7 @@
             font-weight: 900;
             font-style: normal;
             line-height: 0.8em;
-            background-color: rgba(255, 0, 0, 0.2);
+            /*background-color: rgba(255, 0, 0, 0.2);*/
          }
 
          .yellow {
