--- a/A/Altice/Altice_May2020/ads/MC_OPT_Spring_Altice_One_64_2yr_(no_card)/320x50/320x50_frame4.html
+++ b/A/Altice/Altice_May2020/ads/MC_OPT_Spring_Altice_One_64_2yr_(no_card)/320x50/320x50_frame4.html
@@ -23,8 +23,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
-        height: 250px;
+        width: 320px;
+        height: 50px;
         font-family: Arial,Helvetica,sans-serif;
         color: #000;
       }
@@ -60,15 +60,6 @@
         width:inherit;
         height:inherit;
       }
-      .transparent { color:transparent; }
-      .verticalBar {
-        position: absolute;
-        top:0px;
-        width: 7px;
-        height: 58px;
-        background-color: #fff;
-        transform-origin: top center;
-      }
       .coloredText {
         background: linear-gradient(to right, #24d9c3, #0084d6);
         -webkit-background-clip: text;
@@ -76,17 +67,17 @@
       }
       .bulletedText {
         position: relative;
-        padding-left: 15px;
-        font-size: 18px;
+        padding-left: 13px;
+        font-size: 14px;
         line-height: 0.95;
-        margin-bottom: 5px;
+        margin-bottom: 4px;
       }
       .bulletedText::before {
         content: '+';
         position: absolute;
-        top: 1px;
+        top: 0px;
         left: 0px;
-        font-size: 17px;
+        font-size: 14px;
         color: #0084d6;
       }
       #cta::before, #introCta::before {
@@ -100,15 +91,6 @@
         box-sizing: content-box;
         background: #f5f4f7;
       }
-      #cta.ctaWhite {
-        background: none !important;
-        border: 2px solid #fff;
-        padding: 0 !important;
-        color: #fff;
-      }
-      #cta.ctaWhite::before {
-        background: none;
-      }
       #cta:hover {
         opacity: 0.7 !important;
       }
@@ -119,22 +101,22 @@
 <!-- Start of overrode asset attributes values -->
 <script type="text/javascript">
 amo.registerClick("clickUrl","https://www.altice.com");
-amo.registerAttribute("frameVideo1", "TEXT", "https://ct.tubemogul.com/web/altice/2020-04/AlticeIntroVideo_May2020.mp4");
 amo.registerAttribute("ctaText","TEXT","Compra");
-amo.registerAttribute("frameImage2","IMAGE","300x250_Image02.png");
+amo.registerAttribute("frameImage2","IMAGE","1x1.png");
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
-amo.registerAttribute("frameImage4","IMAGE","300x250_Image04.png");
-amo.registerAttribute("frameText1","TEXT","Seguimos conectándote<br>con tu trabajo");
-amo.registerAttribute("frameText12","TEXT","con el día escolar y más");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 56px;left: 56px;font-size: 18px;line-height:1.1;color: #fff;'>Internet y TV</div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 72px;left: 51px;width: 160px;color: #fff;line-height: 1;'><font style='font-size: 59px;'>$64</font><font style='margin-left: 2px;font-size: 10px;display: inline-block;vertical-align: 24px;'>99/<br>mes</font><div style='display:inline-block;font-size: 10.5px;padding: 3px 6px 3px 8px;margin: 0px 0px 0px 6px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;color: #0084d6;background: #fff;'>durante 2 años</div><div class='AlticeRegular' style='margin: 7px 0 0 6px;font-size: 10px;'>más tarifas, imptos.<br>y cargos</div></div>");
-amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top:44px;left:21px;'><div class='bulletedText'>Internet de hasta 200 megas</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:66px;left:21px;'><div class='bulletedText'>Altice One con 220 canales</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:88px;left:21px;'><div class='bulletedText'>Te ayudamos a deshacerte<br>de tu contrato, con<br>hasta $500</div></div><div class='AlticeRegular' style='top:183px;left:22px;font-size:10px;line-height:1.15;'>Conexión por cable.<br>Velocidades WiFi podrían variar</div>");
-amo.registerAttribute("frameText41", "TEXT", "<div style='top: 44px;left: 21px;font-size: 18px;line-height:1.1;'>Internet y TV</div>");
-amo.registerAttribute("frameText42", "TEXT", "<div style='top: 61px;left: 17px;width: 160px;line-height: 1;'><font style='font-size: 59px;' class='coloredText'>$64</font><font style='margin-left: 2px;font-size: 10px;display: inline-block;vertical-align: 24px;'>99/<br>mes</font><div style='display:inline-block;font-size: 10px;padding: 4px 14px 3px 9px;margin: 2px 0px 0px 5px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;color: #fff;background: #0084d6;'>durante 2 años</div><div class='AlticeRegular' style='margin: 4px 0 0 5px;font-size: 10px;'>más tarifas, imptos. y cargos</div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;transform: scale(0.78);transform-origin: top left;'><div class='bulletedText'>Sin contratos</div></div>");
+amo.registerAttribute("frameImage4","IMAGE","1x1.png");
+amo.registerAttribute("frameText1","TEXT","Seguimos conectándote<br>con <font class='coloredText'>tu trabajo</font>");
+amo.registerAttribute("frameText12","TEXT","con el <font class='coloredText'>día escolar</font> y más");
+amo.registerAttribute("frameText21","TEXT","<div style='top:11px;left:9px;'><div class='bulletedText'>Internet de hasta 200 megas</div></div>");
+amo.registerAttribute("frameText22","TEXT","<div style='top:28px;left:9px;'><div class='bulletedText'>Más 220 canales</div></div>");
+amo.registerAttribute("frameText23","TEXT","&nbsp;");
+amo.registerAttribute("frameText31","TEXT","<div style='top:3px;left:8px;font-size:14px;'>Tarjeta de regalo</div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:18px;left:8px;font-size:14px;'>Amazon.com de <span style='color: #0084d6;'>$100</div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:35px;left:8px;font-size:10px;' class='AlticeRegular'>Aplican restricciones.</div>");
+amo.registerAttribute("frameText41", "TEXT", "<div style='top:3px;left:8px;font-size:14px;'>Internet y TV</div>");
+amo.registerAttribute("frameText42", "TEXT", "<div style='top:18px;left:8px;font-size:13.5px;'><font style='color:#0084d6;'>$64.99</font> mes/durante 2 años</div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top:35px;left:8px;font-size:10px;' class='AlticeRegular'>más tarifas, imptos. y cargos</div>");
+amo.registerAttribute("frameImage1", "IMAGE", "1x1.png");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -151,7 +133,6 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;
     </div>
     <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
     <div id="logoImage" class="asset adSizeContainer" data-image="logoImage"></div>
-    <div id="frameBackground" class="asset adSizeContainer" data-image="frameBackground" style="display:none;"></div>
     <div id="frameImage2" class="asset frameImage" data-image="frameImage2"></div>
     <div id="frameText21" class="frameText">!{frameText21}</div>
     <div id="frameText22" class="frameText">!{frameText22}</div>
@@ -164,16 +145,16 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;
     <div id="frameText41" class="frameText">!{frameText41}</div>
     <div id="frameText42" class="frameText">!{frameText42}</div>
     <div id="frameText43" class="frameText">!{frameText43}</div>
-    <!-- <div id="priceLabel" class="asset adSizeContainer" data-image="priceLabel"></div> -->
     <div id="cta" class="text AlticeBold"
       data-text="ctaText"
-      style="top: 213px;
-        left: 22px;
-        width: 69px;
-        height: 18px;
-        font-size: 11px;
+      style="top: 5px;
+        right: 19px;
+        width: 65px;
+        height: 14px;
+        font-size: 10.5px;
         overflow: hidden;
         border-radius: 10px;
+        line-height: 0.9;
         padding: 2px;
         background-image: linear-gradient(to right, #24d9c3, #0084d6);">
     </div>
@@ -183,43 +164,40 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;
       transition:opacity ease-out 0.3s, transform ease-out 0.3s;
       background-color:#f5f4f7;
       opacity:1;">
-      <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <div id="frameVideo1" style="top: 0px;left: 73px;width: 150px;height: 150px;"><video muted playsinline autoplay style="width:100%;"></video></div>
-      <div id="frameText1" class="text AlticeBold"
+      <!-- <div id="ref" class="asset adSizeContainer" data-image="ref"></div> -->
+      <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
-        data-style="text-align:center;"
-        style="top: 129px;
-          left: 20px;
-          width: 260px;
-          height: 60px;
-          font-size: 21px;
+        style="top: 2px;
+          left: 10px;
+          width: 240px;
+          height: 46px;
+          font-size: 16px;
           line-height: 1;">
       </div>
-      <div id="frameText12" class="text AlticeBold"
+      <div id="frameText12" class="text-left AlticeBold"
         data-text="frameText12"
-        data-style="text-align:center;"
-        style="top: 129px;
-          left: 20px;
-          width: 260px;
-          height: 60px;
-          font-size: 21px;
+        style="top: 5px;
+          left: 8px;
+          width: 200px;
+          height: 40px;
+          font-size: 17px;
           line-height: 1;">
       </div>
       <div id="introLogoImage" class="asset adSizeContainer" data-image="introLogoImage"></div>
       <div id="introCta" class="text AlticeBold"
         data-text="ctaText"
-        style="top: 213px;
-          left: 22px;
-          width: 69px;
-          height: 18px;
-          font-size: 11px;
+        style="top: 5px;
+          right: 19px;
+          width: 65px;
+          height: 14px;
+          font-size: 10.5px;
           overflow: hidden;
           border-radius: 10px;
+          line-height: 0.9;
           padding: 2px;
           background-image: linear-gradient(to right, #24d9c3, #0084d6);">
       </div>
     </div>
-
     <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all 0.5s ease 1s;transition:all 0.5s ease 1s;"></div>
   </div>
   <div id="loadFont" style="width:0;height:0;overflow:hidden;">
@@ -227,10 +205,12 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;
     <div class="AlticeBold" style="color:transparent;">AlticeBold</div>
   </div>
   <script type="text/javascript">
+
+
     var ad = new Ad({
       root: document.querySelector('#ad'),
-      width: 300,
-      height: 250,
+      width: 320,
+      height: 50,
       borderWidth: 1,
       borderColor: '#000'
     });
@@ -239,10 +219,9 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;
         cam: {},
         feed: [],
         staticData: {
-          logoImage: 'images/300x250_Logo_Optimum_Black.png',
-          introLogoImage: 'images/300x250_Logo_Optimum_Black.png',
-          frameBackground: '1x1.png',
-          // ref: 'ref.png',
+          logoImage: 'images/320x50_Logo_Optimum_Black.png',
+          introLogoImage: 'images/320x50_Logo_Optimum_Black.png',
+          // ref: 'ref4.png',
         },
         beforeLoad: function(data){
           data.map(function(content){
@@ -255,15 +234,15 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
 
-        textUpdate();
-        gsap.set('.frameImage', {x:'100%'});
-        gsap.set('.frameText, #priceLabel', {x:'-100%'});
+        gsap.set('.frameImage', {x:'-100%'});
+        gsap.set('.frameText', {y:'100%'});
+        gsap.set('div[id^="frameText"][id$="1"], #priceLabel', {x:'-100%',y:0});
         gsap.set('#frameText1, #frameText12', {autoAlpha:0,x:"0%",y:"0%"});
         var priceFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0})
           .to('#priceLabel', {delay:-0.2, x:0,y:0});
@@ -277,57 +256,37 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 167px;left: 22px;
         }
         var generalFrameAnimation = function(frame){
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText'+frame+'1, #frameImage'+frame, {x:0,y:0})
+          .to('#frameImage'+frame, {x:0,y:0})
+          .to('#frameText'+frame+'1', {delay:-0.3, x:0,y:0})
           .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
           .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
         }
-        var generalLeftFrameAnimation = function(frame){
-          gsap.set('#frameImage'+frame, {x:'0'});
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .from('#frameImage'+frame, {autoAlpha:0,delay:0.2})
-          .to('#frameText'+frame+'1', {x:0,y:0})
-          .to('#frameText'+frame+'2', {delay:-0.2, x:0,y:0})
-          .to('#frameText'+frame+'3', {delay:-0.2, x:0,y:0});
-        }
-        //var animateFrame5 = function(flag){
-          //var frameId = 5;
-          //gsap.set('#frameBackground', {display: 'none'});
-          //gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          //.to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[5]})
-          //// .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', {delay: 2.2, opacity:0});
-        //}
+
         var animateFrame4 = function(flag){
           var frameId = 4;
-          gsap.set('#frameBackground', {display: 'block'});
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[4]})
-          //.to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
+          // .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.2, opacity:0, onComplete: animateFrame5}));
         }
         var animateFrame3 = function(flag){
           var frameId = 3;
-          ad.layers.cta.classList.remove('ctaWhite')
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: generalFrameAnimation, onCompleteParams:[3]})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
-          ad.layers.cta.classList.add('ctaWhite');
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameImage'+frameId, {duration:0, onComplete: generalLeftFrameAnimation, onCompleteParams:[frameId]})
+          .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[frameId]})
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          ad.layers.frameVideo1.querySelector('video').onplay = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frameText1', {autoAlpha:1})
+          gsap.set('#frameText1', {x: '0'});
+          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          .to('#frameText1', {autoAlpha:1})
             .to('#frameText1', {autoAlpha:0,delay:1.5})
             .to('#frameText12', {autoAlpha:1})
-          }
-          ad.layers.frameVideo1.querySelector('video').onended = function(){
-            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
-          }
+          .to('#frame1', (flag==true?{}:{delay:1.5, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
                     gsap.delayedCall(1.2, animateFrame4, [true]);
